--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -6,3 +6,6 @@ sql:
     gen:
       go:
         out: "internal/database"
+        overrides:
+          - db_type: "jsonb"
+            go_type: "encoding/json.RawMessage"
