004. log in, save preferences and automatic timer function

--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -9,3 +9,5 @@ sql:
         overrides:
           - db_type: "jsonb"
             go_type: "encoding/json.RawMessage"
+          - db_type: "jsonb NULL"
+            go_type: "*encoding/json.RawMessage"
